Fix the overflow clip rect rounding for overflow scrolling

We were using the enclosingIntRect, but that sets the clip too
large and enables the scrolling contents to paint over the
container's border. Switch to using the pixelSnappedIntRect
to correctly size the clip to the scrolling layer.

Update a test to catch this case in addition to the existing
fractionally sized layer issues.

Fix a potential source of problems in computing scroll offsets
due to different methods for computing contentsSize.

R=flackr@chromium.org
BUG=651305
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2442833002
Cr-Commit-Position: refs/heads/master@{#427411}

Former-commit-id: ecd9fdae8684493203bc19683c83da02e397512c